# fastapi_base_project

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
fastapi-project/: alembic.ini  main.py
fastapi-project/api/: __init__.py
fastapi-project/api/dependencies/: user_manager.py  users.py
fastapi-project/api/dependencies/authentication/: __init__.py  backend.py  fastapi_users_dependencies.py  strategy.py
fastapi-project/api/schemas/: user.py
fastapi-project/api/v1/: __init__.py  auth.py  users.py
fastapi-project/constants/: crud_types.py
fastapi-project/core/: config.py
fastapi-project/core/auth/: transport.py  user_manager.py
fastapi-project/core/database/: __init__.py  db_handler.py
fastapi-project/core/database/models/: __init__.py  base.py  user.py
fastapi-project/core/database/models/mixins/: timestamps.py
fastapi-project/core/models/: __init__.py  base.py  db_helper.py
fastapi-project/cruds/mixins/: create.py  delete.py  read.py  update.py
fastapi-project/migrations/: env.py
fastapi-project/migrations/versions/: 2026_03_28_19:11:19_6f1ab1e4d425_create_user_table.py
